implemeting add transaction in a budget
