# src/app/services/models/update-transaction-dto.ts
@@ -3,6 +3,7 @@
 /* Code generated by ng-openapi-gen DO NOT EDIT. */
 
 export interface UpdateTransactionDto {
+  id?: string;
   amount: number;
   category: 'INCOME' | 'BONUS' | 'RENT_MORTGAGE' | 'UTILITIES' | 'GROCERIES' | 'TRANSPORT' | 'INSURANCE' | 'HEALTH' | 'DINING_OUT' | 'ENTERTAINMENT' | 'SHOPPING' | 'TRAVEL' | 'SAVINGS' | 'INVESTMENTS' | 'DEBT' | 'GIFTS' | 'OTHER';
   date?: string;
@@ -10,4 +11,5 @@ export interface UpdateTransactionDto {
   status: 'REAL' | 'EXPECTED';
   title: string;
   type: 'INCOME' | 'EXPANSE';
+  budgetPlanId?: string;
 }
